added searchEservices api and version_number e version column
