# src/main/java/it/pagopa/interop/probing/eservice/operations/mapstruct/mapper/MapStructMapper.java
@@ -1,5 +1,6 @@
 package it.pagopa.interop.probing.eservice.operations.mapstruct.mapper;
 
+import java.util.List;
 import java.util.UUID;
 
 import org.mapstruct.Mapper;
@@ -8,9 +9,11 @@ import org.mapstruct.Mapping;
 import it.pagopa.interop.probing.eservice.operations.dtos.ChangeEserviceStateRequest;
 import it.pagopa.interop.probing.eservice.operations.dtos.ChangeProbingFrequencyRequest;
 import it.pagopa.interop.probing.eservice.operations.dtos.ChangeProbingStateRequest;
+import it.pagopa.interop.probing.eservice.operations.dtos.EserviceViewDTO;
 import it.pagopa.interop.probing.eservice.operations.mapstruct.dto.UpdateEserviceFrequencyDto;
 import it.pagopa.interop.probing.eservice.operations.mapstruct.dto.UpdateEserviceProbingStateDto;
 import it.pagopa.interop.probing.eservice.operations.mapstruct.dto.UpdateEserviceStateDto;
+import it.pagopa.interop.probing.eservice.operations.model.view.EserviceView;
 
 @Mapper(componentModel = "spring")
 public interface MapStructMapper {
@@ -21,10 +24,12 @@ public interface MapStructMapper {
 
 	UpdateEserviceProbingStateDto toUpdateEserviceProbingStateDto(UUID eserviceId, UUID versionId,
 			ChangeProbingStateRequest changeProbingStateRequest);
-
+	
 	@Mapping(source = "changeProbingFrequencyRequest.frequency", target = "newPollingFrequency")
 	@Mapping(source = "changeProbingFrequencyRequest.startTime", target = "newPollingStartTime")
 	@Mapping(source = "changeProbingFrequencyRequest.endTime", target = "newPollingEndTime")
 	UpdateEserviceFrequencyDto toUpdateEserviceFrequencyDto(UUID eserviceId, UUID versionId,
 			ChangeProbingFrequencyRequest changeProbingFrequencyRequest);
+
+	List<EserviceViewDTO> toSearchEserviceResponse(List<EserviceView> eserviceViewEntity);
 }
