# src/main/java/it/pagopa/interop/probing/eservice/operations/rest/EserviceController.java
@@ -1,5 +1,6 @@
 package it.pagopa.interop.probing.eservice.operations.rest;
 
+import java.util.List;
 import java.util.UUID;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,6 +11,8 @@ import it.pagopa.interop.probing.eservice.operations.api.EservicesApi;
 import it.pagopa.interop.probing.eservice.operations.dtos.ChangeEserviceStateRequest;
 import it.pagopa.interop.probing.eservice.operations.dtos.ChangeProbingFrequencyRequest;
 import it.pagopa.interop.probing.eservice.operations.dtos.ChangeProbingStateRequest;
+import it.pagopa.interop.probing.eservice.operations.dtos.EserviceState;
+import it.pagopa.interop.probing.eservice.operations.dtos.SearchEserviceResponse;
 import it.pagopa.interop.probing.eservice.operations.exception.EserviceNotFoundException;
 import it.pagopa.interop.probing.eservice.operations.mapstruct.mapper.MapStructMapper;
 import it.pagopa.interop.probing.eservice.operations.service.EserviceService;
@@ -45,5 +48,12 @@ public class EserviceController implements EservicesApi {
 		eserviceService.updateEserviceState(
 				mapstructMapper.toUpdateEserviceStateDto(eserviceId, versionId, changeEserviceStateRequest));
 		return ResponseEntity.noContent().build();
+	}
+
+	@Override
+	public ResponseEntity<SearchEserviceResponse> searchEservices(Integer limit, Integer offset, String eserviceName,
+			Integer versionNumber, String eserviceProducerName, List<EserviceState> eServiceState) {
+		return ResponseEntity.ok(eserviceService.searchEservices(limit, offset, eserviceName, eserviceProducerName,
+				versionNumber, eServiceState));
 	}
 }
